force-app/main/default/objects/House_Member__c/House_Member__c.object-meta.xml
<CustomObject>
    <label>House Member</label>
    <nameField>
        <label>House Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>House Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>