force-app/main/default/objects/House_Member__c/fields/Added_Description_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Added_Description_Additional_Details__c</fullName>
    <label>Added Description/Additional Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>