force-app/main/default/objects/House_Member__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedan,</fullName>
            </value>
            <value>
                <fullName>SUV,</fullName>
            </value>
            <value>
                <fullName>Truck,</fullName>
            </value>
            <value>
                <fullName>Coop,</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>