force-app/main/default/objects/House_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>House Members</relationshipLabel>
    <relationshipName>House_Members</relationshipName>
    <type>Lookup</type>
</CustomField>