force-app/main/default/objects/House_Member__c/fields/Guardian__c.field-meta.xml
<CustomField>
    <fullName>Guardian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact for when child household member is selected</description>
    <label>Guardian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>House Members (Guardian)</relationshipLabel>
    <relationshipName>House_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>