force-app/main/default/objects/House_Member__c/fields/Human_Type__c.field-meta.xml
<CustomField>
    <fullName>Human_Type__c</fullName>
    <label>Human Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
                <color>#66CCCC</color>
                <label>Adult</label>
            </value>
            <value>
                <fullName>Child</fullName>
                <color>#33FF33</color>
                <label>Child</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>