force-app/main/default/objects/House_Member__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tesla,</fullName>
            </value>
            <value>
                <fullName>Toyota,</fullName>
            </value>
            <value>
                <fullName>Subaru,</fullName>
            </value>
            <value>
                <fullName>Chevy,</fullName>
            </value>
            <value>
                <fullName>Ford,</fullName>
            </value>
            <value>
                <fullName>Lincoln,</fullName>
            </value>
            <value>
                <fullName>Cadillac,</fullName>
            </value>
            <value>
                <fullName>Honda,</fullName>
            </value>
            <value>
                <fullName>Hyundai,</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>