force-app/main/default/objects/House_Member__c/fields/Number_of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pets__c</fullName>
    <label># of Pets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>