force-app/main/default/objects/House_Member__c/fields/Pet_Breeds__c.field-meta.xml
<CustomField>
    <fullName>Pet_Breeds__c</fullName>
    <label>Pet Breeds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alaskan Huskies</fullName>
            </value>
            <value>
                <fullName>Siberian Huskies</fullName>
            </value>
            <value>
                <fullName>Shiba Inu</fullName>
            </value>
            <value>
                <fullName>Golden Retrievers</fullName>
            </value>
            <value>
                <fullName>Poodles</fullName>
            </value>
            <value>
                <fullName>Dalmations</fullName>
            </value>
            <value>
                <fullName>Chihuahuas</fullName>
            </value>
            <value>
                <fullName>Kerry Beagle</fullName>
            </value>
            <value>
                <fullName>Fox Hound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>