force-app/main/default/objects/House_Member__c/fields/Pet_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pet_Fees__c</fullName>
    <label>Pet Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>