force-app/main/default/objects/House_Member__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Unit__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>House Members</relationshipLabel>
    <relationshipName>House_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>