force-app/main/default/objects/House_Member__c/recordTypes/Cars.recordType-meta.xml
<RecordType>
    <fullName>Cars</fullName>
    <active>true</active>
    <description>Vehicles of the Future</description>
    <label>Cars</label>
</RecordType>