force-app/main/default/objects/House_Member__c/recordTypes/People.recordType-meta.xml
<RecordType>
    <fullName>People</fullName>
    <active>true</active>
    <description>Human Tenants of the Apartment</description>
    <label>People</label>
</RecordType>