force-app/main/default/objects/House_Member__c/recordTypes/Pets.recordType-meta.xml
<RecordType>
    <fullName>Pets</fullName>
    <active>true</active>
    <description>Animal cuddly companions</description>
    <label>Pets</label>
</RecordType>