force-app/main/default/objects/House_Member__c/validationRules/Pet_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Pet_Max</fullName>
    <active>true</active>
    <description>No more than two pets</description>
    <errorConditionFormula>Number_of_Pets__c &gt; 2</errorConditionFormula>
    <errorDisplayField>Number_of_Pets__c</errorDisplayField>
    <errorMessage>Hello valued tenant! We love our cuddly companions - however the max here is two!</errorMessage>
</ValidationRule>